docs: 更新文档适配 Gradle 构建系统
- 更新 README.md 中的构建命令（mvn → ./gradlew）
- 更新依赖声明示例为 Kotlin DSL 格式
- 更新 CI_OPTIMIZATION.md 缓存策略
- 更新 .claude 和 .codex 配置文档
- 添加 build-logic 模块说明到 project-info.md
- 同步各模块 README 的最后更新日期